--- a/page/style.css
+++ b/page/style.css
@@ -33,6 +33,7 @@ a, a:visited, a:hover {
   background-color: rgb(16,196,255);
   padding: 5px;
   width: 100px;
+  height: 20px;
   text-align: center;
   margin-top: 20px;
 }
@@ -83,7 +84,7 @@ a, a:visited, a:hover {
   width: 290px;
   float: left;
   left: 75px;
-  text-shadow: black 1px 1px 2px, white 0 0 1px;;
+  text-shadow: black 0px 0px 2px, white 0 0 1px;
 }
 .title {
 	color: rgb(255,255,255);
@@ -98,7 +99,6 @@ a, a:visited, a:hover {
 }
 .letter { 
    color: rgb(16,196,255);
-   font-size: 100%;
 }
 
 #nav {
@@ -150,7 +150,7 @@ a, a:visited, a:hover {
   position: relative;
   top: 25px;
   left: 50px;
-  box-shadow: 5px 5px 10px rgba(30,30,30,0.5);
+  box-shadow: 6px 5px 10px rgba(30,30,30,0.5);
 }
 
 #search {
@@ -159,7 +159,7 @@ a, a:visited, a:hover {
   height: 26px;
   position: relative;
   right: 61px;
-  top: 20px;
+  top: 45px;
 }
 #search input {
   height: 26px;
@@ -181,10 +181,11 @@ a, a:visited, a:hover {
   margin:0 auto;
 }
 .line1title {
-  color: rgb(117,117,117);
+  color: rgb(20,20,20);
 	font-family: "TerminalDosis-Light";
 	font-size: 30pt;
 	text-align: left;
+	text-shadow: white 0px 0px 1px;
 }
 .line1img {
   border:solid 7px white;
@@ -221,9 +222,7 @@ a, a:visited, a:hover {
 }
 #exp .bluebutton {
   margin-left: 35px;
-}
-#exp .line1text {
-  margin-top: 13px;
+  margin-top: 30px;
 }
 #exp .line1title {
   padding-left: 25px;
@@ -240,12 +239,13 @@ a, a:visited, a:hover {
 }
 #new .bluebutton {
   margin-left: 89px;
-  margin-top: 25px;
+  margin-top: 24px;
 }
 #new .line1title  {
   text-align: left;
   padding-left: 20px;
 }
+
 .line1subtitle {
   font-family: "Calibri";
   font-size: 12pt;
@@ -266,6 +266,7 @@ a, a:visited, a:hover {
 	font-size: 30pt;
 	text-align: left;
 	padding-left: 15px;
+	text-shadow: black 0px 0px 1px;
 }
 .line2img {
   border:solid 7px white;
@@ -295,6 +296,9 @@ a, a:visited, a:hover {
 #philo .line2title {
   padding-left: 7px;
 }
+#philo .bluebutton {
+  margin-top: 15px;
+}
 #soon {
   width: 285px;
   border-left: solid 1px rgb(76,76,76);
@@ -304,7 +308,7 @@ a, a:visited, a:hover {
 }
 #soon .bluebutton {
   margin-left: 89px;
-  margin-top: 18px;
+  margin-top: 13px;
 }
 #soon .eventtext {
   color: rgb(234,234,234);
@@ -314,13 +318,13 @@ a, a:visited, a:hover {
 #footer {
   background-color: rgb(17,17,17);
   width: 1000px;
-  height: 100px;
+  height: 80px;
   margin:0 auto;
 }
 
 #social {
   float: right;
   position: relative;
-  top: 77px;
-  right: 30px;
+  top: 57px;
+  right: 110px;
 }
