--- a/photos/style.css
+++ b/photos/style.css
@@ -17,31 +17,34 @@ body {
 #img1, #img2, #img3 {
   position: absolute;
   border:solid 10px white;
-  width: 400px auto;
+  width: auto;
 }
 
 #img1 {
   box-shadow: 0 0 15px rgba(30,30,30,0.5);
   left: 0px;
+  height: 200px;
+  top: 50px;
 }
 #img2 {
   box-shadow: 0 0 15px rgba(30,30,30,0.5);
   left: 180px;
+  height: 300px;
+  top: 0px;
 }
 #img3 {
   box-shadow: 0 0 15px rgba(30,30,30,0.5);
-  left: 430px;
+  left: 500px;
+  height: 200px;
+  top: 50px;
 }
 
 .left {
   z-index: 1;
-  height: 250px;
 }
 .center {
   z-index: 3;
-  height: 300px;
 }
 .right {
   z-index: 2;
-  height: 250px;
 }
